# picnic-bindings-rs

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml
libpicnic-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
libpicnic-sys/src/: lib.rs
libpicnic-sys/tests/: kats.rs
picnic-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
picnic-sys/src/: lib.rs
picnic-sys/tests/: kats.rs
src/: lib.rs  serialization.rs  wrapper.rs
tests/: picnic.rs
