[package]
name = "picnic-bindings"
description = "Bindings for the Picnic digital signature scheme"
version = "0.3.0"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
homepage = "https://microsoft.github.io/Picnic/"
repository = "https://github.com/ait-crypto/picnic-bindings-rs"
license = "MIT"
edition = "2021"
rust-version = "1.56"
keywords = ["signatures", "Picnic"]
categories = ["cryptography", "api-bindings", "no-std"]

[dependencies]
picnic-sys = { version = "3.0.5", path = "picnic-sys", default-features = false }
signature = { version = "1.3", default-features = false }
paste = "1.0"
subtle = { version = "2.4", optional = true }

[dev-dependencies]
generic-tests = "0.1"

[workspace]
members = ["picnic-sys"]

[features]
default = ["std", "system", "static-fallback", "picnic", "picnic3"]
picnic = ["picnic-sys/picnic"]
picnic3 = ["picnic-sys/picnic3"]
unruh-transform = ["picnic-sys/unruh-transform"]
system = ["picnic-sys/system"]
static-fallback = ["picnic-sys/static-fallback"]
std = ["signature/std"]

[package.metadata.docs.rs]
all-features = true