[package]
name = "picnic-bindings"
description = "Bindings for the Picnic digital signature scheme"
version = "0.6.0"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
homepage = "https://microsoft.github.io/Picnic/"
repository = "https://github.com/ait-crypto/picnic-bindings-rs"
license = "MIT"
edition = "2021"
rust-version = "1.60"
keywords = ["signatures", "Picnic"]
categories = ["cryptography", "api-bindings", "no-std"]

[dependencies]
libpicnic-sys = { version = "0.1", path = "libpicnic-sys", default-features = false }
signature = { version = "2.0", default-features = false }
paste = "1.0"
subtle = { version = "2.4", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }
serde_bytes = { version = "0.11", optional = true, default-features = false, features = [
    "alloc",
] }
zeroize = { version = "1.5", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
generic-tests = "0.1"
serde_json = "1.0"
serde-bytes-repr = "0.2"

[workspace]
members = ["libpicnic-sys"]

[features]
default = ["std", "system", "static-fallback", "picnic", "picnic3"]
picnic = ["libpicnic-sys/picnic"]
picnic3 = ["libpicnic-sys/picnic3"]
unruh-transform = ["libpicnic-sys/unruh-transform"]
system = ["libpicnic-sys/system"]
static-fallback = ["libpicnic-sys/vendored"]
std = ["signature/std"]
serialization = ["dep:serde", "dep:serde_bytes"]
zeroize = ["dep:zeroize"]

[package.metadata.docs.rs]
all-features = true
