[package]
name = "picnic-sys"
description = "Declarations for using Picnic's shared library"
version = "3.0.17"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
homepage = "https://microsoft.github.io/Picnic/"
repository = "https://github.com/ait-crypto/picnic-bindings-rs"
license = "MIT"
edition = "2021"
rust-version = "1.60"
links = "picnic"
categories = ["external-ffi-bindings"]

[dependencies]
libc = { version = "0.2", default-features = false }
paste = "1"
zeroize = { version = "1.5", optional = true, default-features = false, features = [
    "derive",
] }

[build-dependencies]
pkg-config = { version = "0.3", optional = true }
cc = { version = "1", optional = true, features = ["parallel"] }

[dev-dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[features]
default = ["system", "static-fallback", "picnic", "picnic3"]
picnic = []
picnic3 = []
unruh-transform = ["picnic"]
system = ["dep:pkg-config"]
static-fallback = ["dep:cc"]
