[package]
name = "picnic-sys"
description = "Declarations for using Picnic's shared library"
version = "3.0.20"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
homepage = "https://microsoft.github.io/Picnic/"
repository = "https://github.com/ait-crypto/picnic-bindings-rs"
license = "MIT"
edition = "2021"
rust-version = "1.56"
categories = ["external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpicnic-sys = { path = "../libpicnic-sys", version = "0.1", default-features = false }
zeroize = { version = "1.0", optional = true, default-features = false }

[features]
default = ["system", "static-fallback", "picnic", "picnic3"]
# Enable Picnic parameter sets
picnic = ["libpicnic-sys/picnic"]
# Enable Picnic3 parameter sets
picnic3 = ["libpicnic-sys/picnic3"]
# Enable Picnic parameter sets with Unruh transform
unruh-transform = ["libpicnic-sys/unruh-transform"]
# Look for libpicnic via pkg-config
system = ["libpicnic-sys/system"]
# Build libpicnic if not found
static-fallback = ["libpicnic-sys/vendored"]
# Add parameter set-specfic mappings
param-bindings = ["libpicnic-sys/param-bindings"]
